add linkedin profile badge to navbar

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#contact">Contact</a>
         </li>
+        <li>
+          <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="michele-conway"><a class="LI-simple-link" href='https://www.linkedin.com/in/michele-conway?trk=profile-badge'>Michele Conway</a></div>
+        </li>
       </ul>
     </nav>
 
@@ -236,7 +239,8 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/stylish-portfolio.min.js"></script>
-
+    <!-- linkedin badge -->
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   </body>
 
 </html>
