--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </section>
 
     <!-- Portfolio -->
-    <section class="content-section" id="portfolio" style="background-color: #ecd2d4;">
+    <section class="content-section" id="portfolio" style="background-color: #fff;">
       <div class="container">
         <div class="content-section-heading text-center">
           <h3 class="text-secondary mb-0">Portfolio</h3>
@@ -125,14 +125,15 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://github.com/mconway890/beer-fridge-react-app" target="_blank">
               <span class="caption">
                 <span class="caption-content">
                   <h2>React/Redux Project</h2>
-                  <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                  <p class="mb-0">
+Beer Fridge is a single page React/Redux app built with a Rails API back-end. The app allows you to share the beers you're currently enjoying.</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/code.jpg" alt="">
+              <img class="img-fluid" src="img/beer.jpg" alt="">
             </a>
           </div>
         </div>
